# forge_reboot_genesis_v1

./: .gitignore  README.md  pyproject.toml  setup.py
ui/: agent_dashboard.py  campaign_dashboard.py  loader.py  master_forge.yaml  master_ui.py  prefill_backstories.yaml  prefill_roles.yaml  prefill_tasks.yaml  teams.yaml
ui/backup/: prefill_mappings_backup.yaml
